# administrador-ISP

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml
base/: admin.py  views.py
base/templatetags/: admin_extras.py
clientes/: admin.py  apps.py  models.py
clientes/migrations/: 0001_initial.py  0002_alter_cliente_options.py  0003_rename_usuario_id_cliente_id.py  0004_alter_cliente_id.py
conexiones/: asgi.py  celery.py  settings.py  urls.py  utils.py  wsgi.py
facturacion/: admin.py  apps.py  models.py  signals.py  tasks.py  utils.py  views.py
facturacion/migrations/: 0001_initial.py  0002_alter_factura_options.py  0002_alter_pago_estado.py  0002_initial.py  0003_alter_cargo_fecha_emision_and_more.py  0003_alter_factura_periodo_inicio.py  0003_remove_factura_fecha_emision_and_more.py  0004_alter_cargo_cliente_alter_cargo_factura_origen_and_more.py  0004_factura_codigo.py  0004_rename_factura_id_factura_id_rename_pago_id_pago_id.py  0005_alter_factura_id_alter_pago_id.py  0005_remove_pago_factura_factura_pago_and_more.py  0006_factura_instalacion.py  0006_remove_factura_pago_pago_factura.py  0007_auto_20260606_2140.py  0007_remove_pago_factura_factura_pago.py  0008_remove_factura_cliente_alter_factura_instalacion.py  0008_remove_factura_pago_pago_factura.py  0009_alter_factura_options_alter_pago_factura.py  0009_factura_estado_factura_monto_total.py  0010_auto_20260607_0856.py  0010_remove_pago_metodo_pago_metodo_pago_pago_tipo_pago_and_more.py  0011_factura_fecha_reconexion.py  (+27 more)
instalaciones/: admin.py  apps.py  models.py  signals.py
nucleo_admin/: admin.py  apps.py  middleware.py  models.py  tasks.py
planes/: admin.py  apps.py  models.py  signals.py
redes/: admin.py  apps.py  mikrotik_cliente.py  models.py  signals.py  tasks.py
usuarios/: admin.py  apps.py  models.py
(+73 files in other folders)
