[project]
name = "conexiones"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-stubs>=5.2.5",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.0",
    "django-unfold>=0.97.1",
    "weasyprint>=69.0",
    "celery>=5.6.3",
    "redis>=8.0.0",
    "pywa>=4.0.0",
    "celery-types>=0.26.0",
    "pdf2image>=1.17.0",
]

[tool.basedpyright]
typeCheckingMode = "standard"
reportIncompatibleVariableOverride = false

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
]
