[project]
name = "conexiones"
version = "2.1.5"
description = "Sistema integral para la gestión y administración de proveedores de servicios de internet (ISP)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-stubs>=5.2.5",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.0",
    "django-unfold>=0.97.1",
    "weasyprint>=69.0",
    "celery>=5.6.3",
    "redis>=8.0.0",
    "pywa>=4.0.0",
    "celery-types>=0.26.0",
    "pdf2image>=1.17.0",
    "django-simple-history>=3.11.0",
    "routeros-api>=0.21.0",
    "django-tenants>=3.10.1",
    "django-tenant-users>=2.2.1",
    "pillow>=12.2.0",
    "requests>=2.34.2",
]

[tool.basedpyright]
typeCheckingMode = "standard"
reportIncompatibleVariableOverride = false

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
]
